--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,23 @@
+*~
 *.pyc
-*.swp
-*.log
-.glance-venv
-.venv
-.tox
-.coverage
-cover/*
-nosetests.xml
-coverage.xml
-glance.sqlite
-AUTHORS
-ChangeLog
-build
-doc/source/api
-dist
+*.dat
+TAGS
+*.egg-info
 *.egg
-glance.egg-info
-tests.sqlite
-glance/versioninfo
-# Files created by doc build
-doc/source/api
-
-# IDE files
-.project
-.pydevproject
+build
+.coverage
+.tox
+cover
+venv
+.venv
+output.xml
+*.sublime-workspace
+*.sqlite
+*.html
+.*.swp
+.DS_Store
+.testrepository
+versioninfo
+var/*
+ChangeLog
+AUTHORS
