--- a/tox.ini
+++ b/tox.ini
@@ -1,49 +1,39 @@
 [tox]
 minversion = 1.6
-envlist = py26,py27,py33,pypy,pep8,lint2,lint3
+envlist = py26,py27,py33,pep8
 skipsdist = True
 
 [testenv]
-usedevelop = True
-# Customize pip command, add -U to force updates.
-install_command = pip install -U {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
-         GLANCE_STORE_TESTS_DIR={toxinidir}/tests
-         GLANCE_STORE_TESTS_CONFIGS_DIR={toxinidir}/tests/etc/
-
+usedevelop = True
+install_command = pip install --allow-all-external --allow-insecure netaddr -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-#commands = nosetests {posargs}
-commands = python setup.py testr --slowest --testr-args='--concurrency 1 {posargs}'
+commands = python setup.py test --slowest --testr-args='--concurrency 1 {posargs}'
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
 [testenv:pep8]
-commands = flake8
-
-[testenv:lint2]
-basepython = python2
-deps = pylint
-commands = pylint ./glance.store ./tests -E --ignore ./openstack
-
-[testenv:lint3]
-basepython = python3
-deps = pylint
-commands = pylint ./glance.store ./tests -E --ignore ./openstack
+commands =
+  flake8 {posargs}
 
 [testenv:cover]
-setenv = NOSE_WITH_COVERAGE=1
-commands =
-  python setup.py testr --coverage \
-    --testr-args='^(?!.*test.*coverage).*$'
+setenv = VIRTUAL_ENV={envdir}
+commands = python setup.py testr --coverage --testr-args='^(?!.*test.*coverage).*$'
 
 [testenv:venv]
 commands = {posargs}
 
 [flake8]
-exclude = .venv*,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*.egg,.update-venv
-
-[hacking]
-import_exceptions = glance.store.openstack.common.gettextutils._
-
+# TODO(dmllr): Analyze or fix the warnings blacklisted below
+# E711  comparison to None should be 'if cond is not None:'
+# E712  comparison to True should be 'if cond is True:' or 'if cond:'
+# F821  undefined name 'name'
+# F841  local variable 'name' assigned but never used
+# H301  one import per line
+# H402  one line docstring needs punctuation.
+# H404  multi line docstring should start with a summary
+ignore = E711,E712,F821,F841,H301,H402,H404
+builtins = _
+exclude = .venv,.git,.tox,dist,doc,etc,*glance/store/locale*,*openstack/common*,*lib/python*,*egg,build
