Filesystem driver restored
* Don't pass context and location to the Store init
* Use 1 config object and pass that to the store
* Pass context to each method call
* Don't use mox, use mock instead

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ packages =
 namespace_packages =
     glance
 
+[entry_points]
+glance.store.drivers =
+    file = glance.store._drivers.filesystem:Store
+    http = glance.store._drivers.http:Store
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
