Added fake driver, restored base tests, fixed load driver issue

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -6,6 +6,7 @@ module=gettextutils
 module=importutils
 module=jsonutils
 module=log
+module=strutils
 module=timeutils
 
 # The base module to hold the copy of openstack.common
