--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ glance.store.drivers =
     file = glance.store._drivers.filesystem:Store
     http = glance.store._drivers.http:Store
 
+# TESTS ONLY
+    no_conf = glance.store.tests.fakes:UnconfigurableStore
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
