Update from oslo-inc and added processutils

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -6,8 +6,10 @@ module=gettextutils
 module=importutils
 module=jsonutils
 module=log
+module=processutils
 module=strutils
 module=timeutils
+module=units
 
 # The base module to hold the copy of openstack.common
 base=glance.store
