--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ python-swiftclient>=1.5
 python-cinderclient>=1.0.6
 
 # Required by openstack.common libraries
+eventlet>=0.13.0
 iso8601>=0.1.8
 six>=1.4.1
