--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ namespace_packages =
 glance.store.drivers =
     file = glance.store._drivers.filesystem:Store
     http = glance.store._drivers.http:Store
+    vmware = glance.store._drivers.vmware_datastore:Store
 
 # TESTS ONLY
     no_conf = glance.store.tests.fakes:UnconfigurableStore
