--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,17 @@ all_files = 1
 
 [upload_sphinx]
 upload-dir = doc/build/html
+
+[compile_catalog]
+directory = glance.store/locale
+domain = glance.store
+
+[update_catalog]
+domain = glance.store
+output_dir = glance.store/locale
+input_file = glance.store/locale/glance.store.pot
+
+[extract_messages]
+keywords = _ gettext ngettext l_ lazy_gettext
+mapping_file = babel.cfg
+output_file = glance.store/locale/glance.store.pot
