Set the right classifiers in setup.cfg
Mark the library as an alpha library and set the required classifiers
for the target audience.

Change-Id: If240518fb50e17517b1fd2a8b0f041dab5f12b86

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,10 @@ author = OpenStack
 author-email = openstack-dev@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
+    Development Status :: 4 - Alpha
     Environment :: OpenStack
+    Intended Audience :: Developers
     Intended Audience :: Information Technology
-    Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
