Port swift store
Change-Id: Ie070eb95b22729e30e7ced359e890e69e590d04c

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,6 +1,7 @@
 [DEFAULT]
 
 # The list of modules to copy from openstack-common
+module=context
 module=fileutils
 module=gettextutils
 module=importutils
