--- a/setup.cfg
+++ b/setup.cfg
@@ -27,10 +27,26 @@ glance_store.drivers =
     file = glance_store._drivers.filesystem:Store
     http = glance_store._drivers.http:Store
     swift = glance_store._drivers.swift:Store
+    rbd = glance_store._drivers.rbd:Store
+    s3 = glance_store._drivers.s3:Store
+    sheepdog = glance_store._drivers.sheepdog:Store
+    cinder = glance_store._drivers.cinder:Store
+    gridfs = glance_store._drivers.gridfs:Store
     vmware = glance_store._drivers.vmware_datastore:Store
 
     # TESTS ONLY
     no_conf = glance_store.tests.fakes:UnconfigurableStore
+
+    # Backwards compatibility
+    glance.store.filesystem.Store = glance_store._drivers.filesystem:Store
+    glance.store.http.Store = glance_store._drivers.http:Store
+    glance.store.swift.Store = glance_store._drivers.swift:Store
+    glance.store.rbd.Store = glance_store._drivers.rbd:Store
+    glance.store.s3.Store = glance_store._drivers.s3:Store
+    glance.store.sheepdog.Store = glance_store._drivers.sheepdog:Store
+    glance.store.cinder.Store = glance_store._drivers.cinder:Store
+    glance.store.gridfs.Store = glance_store._drivers.gridfs:Store
+    glance.store.vmware_datastore.Store = glance_store._drivers.vmware_datastore:Store
 
 [build_sphinx]
 source-dir = doc/source
