Add entry-point for oslo.config options and update registering logic
1. The change exposed all options of store and driver by oslo.config
entry-point.
2. Refactor store and driver options registering logic to leverage this
unified option discover function.

Change-Id: Ibbd0f27abd0c0eb9a88d8d30de1e89264a11f53d
Signed-off-by: Zhi Yan Liu <zhiyanl@cn.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,9 @@ glance_store.drivers =
     glance.store.gridfs.Store = glance_store._drivers.gridfs:Store
     glance.store.vmware_datastore.Store = glance_store._drivers.vmware_datastore:Store
 
+oslo.config.opts =
+    glance.store = glance_store.backend:_list_opts
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
