--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,7 @@ commands = {posargs}
 # E712  comparison to True should be 'if cond is True:' or 'if cond:'
 # F841  local variable 'name' assigned but never used
 # H301  one import per line
-# H402  one line docstring needs punctuation.
 # H404  multi line docstring should start with a summary
-ignore = E711,E712,F841,H301,H402,H404
+ignore = E711,E712,F841,H301,H404
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*openstack/common*,*lib/python*,*egg,build
