--- a/setup.cfg
+++ b/setup.cfg
@@ -72,3 +72,6 @@ input_file = glance_store/locale/glance_store.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = glance_store/locale/glance_store.pot
+
+[wheel]
+universal = 1
