--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,13 +1,9 @@
 [DEFAULT]
 
 # The list of modules to copy from openstack-common
+module=_i18n
 module=context
-module=gettextutils
-module=importutils
 module=processutils
-module=strutils
-module=timeutils
-module=units
 
 # The base module to hold the copy of openstack.common
-base=glance.store
+base=glance_store
