--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ oslo.config>=1.2.0
 oslo.i18n>=0.1.0
 oslo.serialization>=1.0.0 # Apache-2.0
 oslo.utils>=1.0.0 # Apache-2.0
+oslo.concurrency>=0.1.0 # Apache-2.0
 stevedore>=0.12
 
 python-cinderclient>=1.0.6
