--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ usedevelop = True
 install_command = pip install --allow-all-external --allow-insecure netaddr -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python setup.py test --slowest --testr-args='{posargs}'
+commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
