--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-oslo.config>=1.2.0
+oslo.config>=1.6.0 # Apache-2.0
 oslo.i18n>=0.1.0
 oslo.serialization>=1.0.0 # Apache-2.0
 oslo.utils>=1.2.0 # Apache-2.0
