--- a/tox.ini
+++ b/tox.ini
@@ -28,9 +28,8 @@ commands = {posargs}
 [flake8]
 # TODO(dmllr): Analyze or fix the warnings blacklisted below
 # E711  comparison to None should be 'if cond is not None:'
-# E712  comparison to True should be 'if cond is True:' or 'if cond:'
 # H301  one import per line
 # H404  multi line docstring should start with a summary
-ignore = E711,E712,H301,H404
+ignore = E711,H301,H404
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*openstack/common*,*lib/python*,*egg,build
