Use a named enum for capability values
In Iedf0d4f829e46ca64c3f4fc6a7dfee54d9b0605b we added support for driver
capabilities in glance_store. That same change also used (mutable)
module globals to check driver capabilities. By moving the capability
definitions inside a subclass of IntEnum we retain all of the previous
functionality with the guarantee that the enum values will not change
once defined.

Change-Id: I13c7bd507252e793b2c790cc9b77c7b8db432d02

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ oslo.serialization>=1.0.0 # Apache-2.0
 oslo.utils>=1.2.0 # Apache-2.0
 oslo.concurrency>=1.4.1         # Apache-2.0
 stevedore>=0.12
+enum34
 
 python-cinderclient>=1.0.6
 
