--- a/tox.ini
+++ b/tox.ini
@@ -27,9 +27,9 @@ commands = {posargs}
 
 [flake8]
 # TODO(dmllr): Analyze or fix the warnings blacklisted below
-# E711  comparison to None should be 'if cond is not None:'
 # H301  one import per line
 # H404  multi line docstring should start with a summary
-ignore = E711,H301,H404
+# H405  multi line docstring summary not separated with an empty line
+ignore = H301,H404,H405
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*openstack/common*,*lib/python*,*egg,build
