--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,9 @@ glance_store.drivers =
 oslo.config.opts =
     glance.store = glance_store.backend:_list_opts
 
+console_scripts =
+    glance-rootwrap = oslo_rootwrap.cmd:main
+
 [extras]
 # Dependencies for each of the optional stores
 s3 =
@@ -61,6 +64,8 @@ swift =
   python-swiftclient>=2.2.0 # Apache-2.0
 cinder =
   python-cinderclient>=1.3.1 # Apache-2.0
+  os-brick>=1.0.0 # Apache-2.0
+  oslo.rootwrap>=2.0.0 # Apache-2.0
 
 [build_sphinx]
 source-dir = doc/source
