--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ debtcollector>=1.2.0 # Apache-2.0
 
 jsonschema!=2.5.0,<3.0.0,>=2.0.0 # MIT
 python-keystoneclient!=1.8.0,!=2.1.0,>=1.6.0 # Apache-2.0
+requests>=2.8.1,!=2.9.0  # Apache-2.0
