--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,20 @@ glance_store.drivers =
 oslo.config.opts =
     glance.store = glance_store.backend:_list_opts
 
+[extras]
+# Dependencies for each of the optional stores
+s3 =
+  boto>=2.32.1
+vmware =
+  oslo.vmware>=1.16.0 # Apache-2.0
+swift =
+  httplib2>=0.7.5
+  python-swiftclient>=2.2.0
+gridfs =
+  pymongo>=3.0.2
+cinder =
+  python-cinderclient>=1.3.1
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
