--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author = OpenStack
 author-email = openstack-dev@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
     Environment :: OpenStack
     Intended Audience :: Developers
     Intended Audience :: Information Technology
