--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,9 @@ commands = python setup.py testr --slowest --testr-args='{posargs}'
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
+[testenv:releasenotes]
+commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html releasenotes/source releasenotes/build/html
+
 [testenv:pep8]
 commands =
   flake8 {posargs}
