Add docs section to tox.ini
Change-Id: I694de56e3927968e179e7e101dfb740c627699a8

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,9 @@ deps = -r{toxinidir}/requirements.txt
        .[s3,vmware,swift,gridfs,cinder]
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
+[testenv:docs]
+commands = python setup.py build_sphinx
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
