--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ enum34;python_version=='2.7' or python_version=='2.6' or python_version=='3.3' #
 
 eventlet>=0.17.4 # MIT
 six>=1.9.0 # MIT
+debtcollector>=0.3.0 # Apache-2.0
 
 jsonschema!=2.5.0,<3.0.0,>=2.0.0 # MIT
