--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,9 @@ source-dir = doc/source
 build-dir = doc/build
 all_files = 1
 
+[pbr]
+autodoc_tree_index_modules = True
+
 [upload_sphinx]
 upload-dir = doc/build/html
 
