tox: use os-testr instead of testr
Make use of the testr OpenStack wrapper ostestr instead of
testr directly.

Closes-Bug: #1566354

Change-Id: I396be386c34e5e2a6587921aacd8eefa4622713a
Signed-off-by: Danny Al-Gaaf <danny.al-gaaf@bisect.de>

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ install_command = pip install --allow-all-external --allow-insecure netaddr -U {
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
        .[s3,vmware,swift,cinder]
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands = ostestr --slowest {posargs}
 
 [testenv:docs]
 commands = python setup.py build_sphinx
