Add functional tests for swift
This change adds functional tests for swift.

Co-Authored-By: Louis Taylor <louis@kragniz.eu>

Change-Id: Ibdd17eebb49a5d96c5cfb02c0ec6bac4826aac7f

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ covhtml/
 
 # Files created by releasenotes build
 releasenotes/build
+
+#Files created by functional tests
+functional_testing.conf
