--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ install_command = pip install --allow-all-external --allow-insecure netaddr -U {
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
        .[s3,vmware,swift,cinder]
+passenv = OS_TEST_*
 commands = ostestr --slowest {posargs}
 
 [testenv:docs]
@@ -30,8 +31,8 @@ commands = python setup.py testr --coverage --testr-args='^(?!.*test.*coverage).
 commands = {posargs}
 
 [testenv:functional]
+sitepackages = True
 setenv = OS_TEST_PATH=./glance_store/tests/functional
-passenv = OS_*
 commands = python setup.py testr --slowest --testr-args='glance_store.tests.functional'
 
 [flake8]
