Add bandit to pep8 and bandit testenv
This patch adds bandit security linter to tox jobs. It ignores
files in the 'tests' directory.

This patch will also fix or exclude any issues as a result from
scan.

Change-Id: I9caa41f596a17a8b961a542d4bc6bb121e7a147f

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,21 @@ commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html release
 [testenv:pep8]
 commands =
   flake8 {posargs}
+  # Run security linter
+  # The following bandit tests are being skipped:
+  # B101 - Use of assert detected.
+  # B110 - Try, Except, Pass detected.
+  # B303 - Use of insecure MD2, MD4, or MD5 hash function.
+  bandit -r glance_store -x tests --skip B101,B110,B303
+
+[testenv:bandit]
+# NOTE(browne): This is required for the integration test job of the bandit
+# project. Please do not remove.
+# The following bandit tests are being skipped:
+# B101 - Use of assert detected.
+# B110 - Try, Except, Pass detected.
+# B303 - Use of insecure MD2, MD4, or MD5 hash function.
+commands = bandit -r glance_store -x tests --skip B101,B110,B303
 
 [testenv:cover]
 # NOTE(nikhil): this target does not use constraints because upstream infra
