Stable liberty py27 tests can fail
After version 3.0.0 of the swift client, it can cause the glance_store
tests to fail. This pins the version to before 3.0.0 to avoid this
problem.

Change-Id: Ib9a234a14d35951a7fd023078ac6a76736b2999e
Closes-Bug: 1583637

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ vmware =
   oslo.vmware>=1.16.0 # Apache-2.0
 swift =
   httplib2>=0.7.5
-  python-swiftclient>=2.2.0
+  python-swiftclient>=2.2.0,<3.0.0
 gridfs =
   pymongo>=3.0.2
 cinder =
