Don't include openstack/common in flake8 exclude list
The directory openstack/common was used to keep codes from
oslo-incubator, we have retired oslo-incubator, so don't use
this directory any more.

Change-Id: I3a72d3b7126037e98fde627233f26a4f1475b416

--- a/tox.ini
+++ b/tox.ini
@@ -50,4 +50,4 @@ commands = python setup.py testr --slowest --testr-args='glance_store.tests.func
 # H404  multi line docstring should start with a summary
 # H405  multi line docstring summary not separated with an empty line
 ignore = H301,H404,H405
-exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*openstack/common*,*lib/python*,*egg,build
+exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*lib/python*,*egg,build
