--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ usedevelop = True
 install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} --allow-all-external --allow-insecure netaddr -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-       .[s3,vmware,swift,cinder]
+       .[vmware,swift,cinder]
 passenv = OS_TEST_*
 commands = ostestr --slowest {posargs}
 
