--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ six>=1.9.0 # MIT
 debtcollector>=1.2.0 # Apache-2.0
 
 jsonschema!=2.5.0,<3.0.0,>=2.0.0 # MIT
+keystoneauth1>=2.14.0  # Apache-2.0
 python-keystoneclient>=3.6.0 # Apache-2.0
 requests>=2.10.0 # Apache-2.0
