--- a/etc/rootwrap.conf
+++ b/etc/rootwrap.conf
@@ -1,5 +1,5 @@
 # Configuration for glance-rootwrap
-# This file should be owned by (and only-writeable by) the root user
+# This file should be owned by (and only-writable by) the root user
 
 [DEFAULT]
 # List of directories to load filter definitions from (separated by ',').
