--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ cinder =
   python-cinderclient>=2.0.1 # Apache-2.0
   os-brick>=1.8.0 # Apache-2.0
   oslo.rootwrap>=5.0.0 # Apache-2.0
+  oslo.privsep>=1.9.0 # Apache-2.0
 
 [build_sphinx]
 source-dir = doc/source
