rearrange existing documentation according to the new standard layout
Change-Id: I0fb178d0b6ebf7ebafc6e2766c8c5efc5d8cc60e
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,10 @@ build-dir = doc/build
 all_files = 1
 
 [pbr]
-autodoc_tree_index_modules = True
+autodoc_index_modules = True
+api_doc_dir = reference/api
+autodoc_exclude_modules =
+  glance_store.tests.*
 warnerrors = True
 
 [upload_sphinx]
