set warning-is-error for documentation build
Change-Id: I285a95b9a2bd9d0f9f02896b44757c582c6d2c56
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,13 +68,13 @@ cinder =
 source-dir = doc/source
 build-dir = doc/build
 all_files = 1
+warning-is-error = 1
 
 [pbr]
 autodoc_index_modules = True
 api_doc_dir = reference/api
 autodoc_exclude_modules =
   glance_store.tests.*
-warnerrors = True
 
 [upload_sphinx]
 upload-dir = doc/build/html
