Migrate legacy jobs to project repository
Brings the legacy functional test jobs into the project repository,
rewritten for zuul3.  The base functional test class has been refactored
to use clouds.yaml, and the functional-swift test has been refactored
to use keystoneauth1.  The devstack hooks have been removed as they
are not necessary with zuul3.

Needed-By: I2a5ff2ee29e2fb8a730406f9f0e6a450b96c85b8
Needed-By: I96600383c072e6d2926f5ff5b6a51057e53d35fd
Change-Id: Iecea4375d1c4832b020b542ca4188b02444325ca

--- a/tox.ini
+++ b/tox.ini
@@ -45,15 +45,17 @@ commands = python setup.py testr --coverage --testr-args='^(?!.*test.*coverage).
 [testenv:venv]
 commands = {posargs}
 
+# See glance_store/tests/functional/README.rst for information on writing or
+# running functional tests.
 [testenv:functional-swift]
 sitepackages = True
 setenv = OS_TEST_PATH=./glance_store/tests/functional/swift
-commands = python setup.py testr --slowest --testr-args='glance_store.tests.functional.swift'
+commands = ostestr --slowest --testr-args='glance_store.tests.functional.swift'
 
 [testenv:functional-filesystem]
 sitepackages = True
 setenv = OS_TEST_PATH=./glance_store/tests/functional/filesystem
-commands = python setup.py testr --slowest --testr-args='glance_store.tests.functional.filesystem'
+commands = ostestr --slowest --testr-args='glance_store.tests.functional.filesystem'
 
 [flake8]
 # TODO(dmllr): Analyze or fix the warnings blacklisted below
