--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ commands =
   # B110 - Try, Except, Pass detected.
   # B303 - Use of insecure MD2, MD4, or MD5 hash function.
   bandit -r glance_store -x tests --skip B101,B110,B303
+  doc8 {posargs}
 
 [testenv:bandit]
 # NOTE(browne): This is required for the integration test job of the bandit
@@ -54,6 +55,9 @@ commands = python setup.py testr --slowest --testr-args='glance_store.tests.func
 sitepackages = True
 setenv = OS_TEST_PATH=./glance_store/tests/functional/filesystem
 commands = python setup.py testr --slowest --testr-args='glance_store.tests.functional.filesystem'
+
+[doc8]
+ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.egg*,doc/build,*requirements.txt
 
 [flake8]
 # TODO(dmllr): Analyze or fix the warnings blacklisted below
