Update tox.ini to conform to the PTI
The current Python Testing Interface specifies the use of
stester, so update tox.ini to use it.

Closes-bug: #1780272
Change-Id: I6b6c60486a26cfbb5793c074fe6f554c6a324846
Co-Authored-By: Nguyen Hai <nguyentrihai93@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/test-requirements.txt
 passenv = OS_TEST_*
-commands = ostestr --slowest {posargs}
+commands = stestr run --slowest {posargs}
 
 [testenv:docs]
 basepython = python3
@@ -45,8 +45,13 @@ commands = bandit -r glance_store -x tests --skip B101,B110,B303
 
 [testenv:cover]
 basepython = python3
-setenv = VIRTUAL_ENV={envdir}
-commands = python setup.py testr --coverage --testr-args='^(?!.*test.*coverage).*$'
+setenv =
+    PYTHON=coverage run --source glance_store --parallel-mode
+commands =
+    stestr run {posargs}
+    coverage combine
+    coverage html -d cover
+    coverage xml -o cover/coverage.xml
 
 [testenv:venv]
 basepython = python3
@@ -56,13 +61,12 @@ commands = {posargs}
 # running functional tests.
 [testenv:functional-swift]
 sitepackages = True
-setenv = OS_TEST_PATH=./glance_store/tests/functional/swift
-commands = ostestr --slowest --testr-args='glance_store.tests.functional.swift'
+commands =
+    stestr run --slowest --test-path=./glance_store/tests/functional/swift
 
 [testenv:functional-filesystem]
-sitepackages = True
-setenv = OS_TEST_PATH=./glance_store/tests/functional/filesystem
-commands = ostestr --slowest --testr-args='glance_store.tests.functional.filesystem'
+commands =
+    stestr run --slowest --test-path=./glance_store/tests/functional/filesystem
 
 [doc8]
 ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.egg*,doc/build,*requirements.txt,lower-constraints.txt
