--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -50,3 +50,9 @@
       jobs:
         - glance_store-dsvm-functional-filesystem
         - glance_store-dsvm-functional-swift
+    check:
+      jobs:
+        - openstack-tox-lower-constraints
+    gate:
+      jobs:
+        - openstack-tox-lower-constraints
