--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://docs.openstack.org/developer/glance_store
+home-page = https://docs.openstack.org/glance_store/latest/
 classifier =
     Development Status :: 5 - Production/Stable
     Environment :: OpenStack
