Remove tox_install.sh
Fully removing tox_install.sh as it is no longer needed with zuulv3.

Closes-bug: #1766500
Change-Id: Ic332b54bd5fbc64efc23f1118a8416291ae65df8
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,10 @@ skipsdist = True
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
 usedevelop = True
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} --allow-all-external --allow-insecure netaddr -U {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-       .[vmware,swift,cinder]
+deps =
+   -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/test-requirements.txt
 passenv = OS_TEST_*
 commands = ostestr --slowest {posargs}
 
