--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,15 @@ passenv = OS_TEST_*
 commands = ostestr --slowest {posargs}
 
 [testenv:docs]
+basepython = python3
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
+basepython = python3
 commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:pep8]
+basepython = python3
 commands =
   flake8 {posargs}
   # Run security linter
@@ -31,6 +34,7 @@ commands =
   doc8 {posargs}
 
 [testenv:bandit]
+basepython = python3
 # NOTE(browne): This is required for the integration test job of the bandit
 # project. Please do not remove.
 # The following bandit tests are being skipped:
@@ -40,10 +44,12 @@ commands =
 commands = bandit -r glance_store -x tests --skip B101,B110,B303
 
 [testenv:cover]
+basepython = python3
 setenv = VIRTUAL_ENV={envdir}
 commands = python setup.py testr --coverage --testr-args='^(?!.*test.*coverage).*$'
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
 
 # See glance_store/tests/functional/README.rst for information on writing or
