--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,12 @@ commands = ostestr --slowest {posargs}
 
 [testenv:docs]
 basepython = python3
-commands = python setup.py build_sphinx
+deps = -r{toxinidir}/doc/requirements.txt
+commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
 basepython = python3
+deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:pep8]
