--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -155,6 +155,7 @@
     templates:
       - openstack-python-jobs
       - openstack-python35-jobs
+      - openstack-python36-jobs
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
       - check-requirements
