--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -160,6 +160,7 @@
       - release-notes-jobs-python3
       - check-requirements
       - lib-forward-testing
+      - lib-forward-testing-python3
     check:
       jobs:
         - openstack-tox-lower-constraints
