--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,11 @@ skipsdist = True
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
 usedevelop = True
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/ocata} --allow-all-external --allow-insecure netaddr -U {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
+install_command = pip install {opts} {packages}
+deps =
+       -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/ocata}
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-       .[vmware,swift,cinder]
 passenv = OS_TEST_*
 commands = ostestr --slowest {posargs}
 
