import zuul job settings from project-config
This is a mechanically generated patch to complete step 1 of moving
the zuul job settings out of project-config and into each project
repository.

Because there will be a separate patch on each branch, the branch
specifiers for branch-specific jobs have been removed.

Because this patch is generated by a script, there may be some
cosmetic changes to the layout of the YAML file(s) as the contents are
normalized.

See the python3-first goal document for details:
https://governance.openstack.org/tc/goals/stein/python3-first.html

Change-Id: Ic20de1346896f60817ac940bcf7876ba0bb4de22
Story: #2002586
Task: #24297

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -43,7 +43,7 @@
         s-object: true
         s-proxy: true
       devstack_localrc:
-        ENABLE_IDENTITY_V2: True
+        ENABLE_IDENTITY_V2: true
 
 - job:
     name: glance_store-tox-cinder-tips-base
@@ -148,9 +148,27 @@
       tox_envlist: py35
 
 - project:
+    templates:
+      - openstack-python-jobs
+      - openstack-python35-jobs
+      - publish-openstack-sphinx-docs
+      - release-notes-jobs
+      - check-requirements
+      - lib-forward-testing
     check:
       jobs:
         - openstack-tox-lower-constraints
+        - legacy-tempest-dsvm-full-ceph-plugin-src-glance_store:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^setup.cfg$
+        - legacy-tempest-dsvm-full-sheepdog:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^setup.cfg$
+
     gate:
       jobs:
         - openstack-tox-lower-constraints
