Provision to add new config options in sample config file
In Rocky we have added support for multiple backend as a EXPERIMENTAL
feature. However configuration options related to multiple backend
are not generated in sample config file due to some issue. We have
added below 2 new config options for multiple backend.

1. enabled_backneds (added in glance)
2. default_backend (added in glance_store)

Made provision to add option 2 from above to sample config
file.

Change-Id: I63571e4a8f85003e304f16653d60cbd38e6b6bde
Partial-Bug: #1793057

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ glance_store.drivers =
 
 oslo.config.opts =
     glance.store = glance_store.backend:_list_opts
+    glance.multi_store = glance_store.multi_backend:_list_config_opts
 
 console_scripts =
     glance-rootwrap = oslo_rootwrap.cmd:main
