--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -22,7 +22,7 @@
         ceilometer-api: false
         ceilometer-collector: false
       # Hardcode glance_store path so the job can be run on glance patches
-      zuul_work_dir: src/git.openstack.org/openstack/glance_store
+      zuul_work_dir: src/opendev.org/openstack/glance_store
 
 - job:
     name: glance_store-dsvm-functional-filesystem
@@ -191,7 +191,7 @@
         # The "tips" jobs can be removed from the stable branch .zuul.yaml
         # files if someone is so inclined, but that would require manual
         # maintenance, so we do not do it by default.  Another option is
-        # to define these jobs in the openstack-infra/project-config repo.
+        # to define these jobs in the openstack/project-config repo.
         # That would make us less agile in adjusting these tests, so we
         # aren't doing that either.
         - glance_store-tox-py27-cinder-tips:
