Replace git.openstack.org URLs with opendev.org URLs
Change-Id: Ia0b66aac906b7920f246c4710ed06d63e11276d8

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skipsdist = True
 setenv = VIRTUAL_ENV={envdir}
 usedevelop = True
 deps =
-   -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+   -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/test-requirements.txt
 passenv = OS_TEST_*
