Restore quotes removal for swift config in Python3
ConfigParser does not remove quotes in Python3 that may break existing
configuration. This commit restores Python2 behavior and acts as
oslo.config StrOpt with quotes=True.

Closes-bug: #1839778
Related-bug: #1839772
Change-Id: I9e8e7e32b7abf1020081cc3b9fbdf7229403b7bf

--- a/glance_store/tests/etc/glance-swift.conf
+++ b/glance_store/tests/etc/glance-swift.conf
@@ -11,6 +11,11 @@ project_domain_id = default
 auth_version = 3
 auth_address = http://example.com
 
+[ref3]
+user = "user3"
+key = "key3"
+auth_address = "http://example.com"
+
 [store_2]
 user = tenant:user1
 key = key1
